--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Arcturus91/toolboxTest-backend#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
