--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "homepage": "https://github.com/Arcturus91/toolboxTest-backend#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "chai": "^4.3.7",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mocha": "^10.1.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
 }
